# fastcontext-hybrid-mcp

./: .gitignore  Dockerfile.cpu  Dockerfile.vulkan  HOSTING.md  README.md  docker-compose.yml  mcp_server.py  pyproject.toml  setup-mac.sh  setup.sh  start.sh
